# gatewayrs563

./: Cargo.toml  LICENSE  README.md
src/: README.md  auth.rs  configuration.rs  davmail-auth.rs  davmail-config.rs  davmail-exchange-client.rs  davmail-imap-module.rs  exchange.rs  main.rs  protocols.rs
src/auth/: basicauth.rs  oauth2.rs
